--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Consolas', monospace;
     text-align: center;
     background-color: #1e1f1c;
+    color: #66d9ef;
     padding: 0px;
     margin: 0px;
 }
@@ -42,10 +43,6 @@ h1 {
 h2 {
     color: #a6e22e; /* Set the color to white (you can change it if you prefer another color) */
     font-size: 18px; /* Adjust the size if you need */
-}
-
-p {
-    color: #66d9ef
 }
 
 .container {
@@ -100,7 +97,6 @@ p {
     width: 100%;                 /* Set a width for the box */
     height: 50px;                /* Set a height for the box */
     background-color: #41433a;   /* Set the background color */
-    color: #b9a27c;                 /* Set the text color */
     display: flex;                /* Use flexbox to align logo and text */
     justify-content: center;  /* Align children from the start */
     align-items: center;          /* Center vertically */
@@ -125,7 +121,7 @@ p {
 .lang-overview-box-title {
     font-size: 18px;             /* Set the font size */
     font-weight: bold;           /* Make the text bold */
-    margin-right: 10px;
+    margin-right: 20px;
     color: #b9a27c;
 }
 
@@ -134,6 +130,7 @@ p {
     border-radius: 10px;
     margin-right: 10px;
     text-align: left;
+    overflow: hidden;
 }
 
 /* Hover effect to expand the box and reveal more text */
@@ -141,8 +138,7 @@ p {
     transition: all 0.3s ease-in-out;
     background-color: #41433a;
     justify-content: flex-start;
-    height: auto;  /* Adjust height based on content */
-    max-height: 400px;  /* Optional: max limit for box expansion */
+    height: auto;
 }
 
 .lang-overview-box:hover .lang-overview-box-logo {
@@ -151,6 +147,17 @@ p {
 
 .lang-overview-box:hover .lang-overview-expand-content {
     display: block;  /* Show the content */
+}
+
+.project-ref-button {
+    display: block;
+    text-align: center;
+    background-color: #f92672;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    margin-bottom: 10px;
 }
 
 @keyframes typing {
