Fixed button width issue in c# container

--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ h2 {
 }
 
 .lang-overview-expand-content {
+    width: 100%;
     display: none;
     border-radius: 10px;
     margin-right: 10px;
